# sample_data_generator

./: .gitignore  README.md  pyproject.toml
src/sample_data_generator/: cli.py  generator.py  templates.py  writer.py
