[project]
name = "sample-data-generator"
version = "0.1.0"
description = "Interactive sample data generator CLI"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "click>=8.1",
    "faker>=30.0",
    "polars>=1.0",
]

[project.scripts]
sample-data-generator = "sample_data_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_data_generator"]
